<resources>
    <string name="app_name">200以内加法考试系统</string>
    <string name="test_button">考试开始!</string>
    <string name="class_input">班级</string>
    <string name="name_input">姓名</string>
    <string name="welcome">欢迎参加考试!</string>
    <string name="notice_input">请输入您的个人信息:</string>
    <string name="btn1">开始练习</string>
    <string name="btn2">开始测试</string>
    <string name="feilei">请选择做题模式</string>
    <string name="test">12 + 34 =</string>
    <string name="count_down">考试剩余时间：</string>
    <string name="user_info">考生信息</string>
    <string name="count_down_time">XX分XX秒</string>
    <string name="hand_in">交卷</string>
    <string name="page_up">上一页</string>
    <string name="page_down">下一页</string>
    <string name="page_info">第 X 页 共 X 页</string>
    <string name="test_finish">考试结束</string>
    <string name="test_score">考试成绩</string>
    <string name="test_time">考试时间</string>
    <string name="save">返回首页</string>
    <string name="again">继续学习</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>